--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "recca0120/laravel-erd": "^0.0.3",
         "samuelterra22/laravel-report-generator": "^5.2",
         "yajra/laravel-datatables-oracle": "^10.11"
     },
